k8s/py-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: py-app
  name: py-app
spec:
  replicas: 1
  selector:
    matchLabels:
      service: py-app
  strategy: {}
  template:
    metadata:
      labels:
        network/dev-network: "true"
        service: py-app
    spec:
      containers:
      - name: py-app
        image: gcr.io/essential-truth-365415/pytradebyteapp:latest
        ports:
        - containerPort: 8000
        resources: { }
      restartPolicy: Always
status: {}
