k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy: {}
  template:
    metadata:
      labels:
        network/dev-network: "true"
        service: redis
    spec:
      containers:
        - image: redis
          name: redis-container
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
