k8s/py_app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: py-app
  name: py-app
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    service: py-app
  type: LoadBalancer
status:
  loadBalancer: {}
