k8s/dev-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: dev-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/dev-network: "true"
  podSelector:
    matchLabels:
      network/dev-network: "true"
